# candidatos-2018

./: README.md  candidatos.ipynb  descarga.py  ine-2018.db
candidatos-2018/: pyproject.toml
