[tool.poetry]
name = "candidatos-2018"
version = "0.1.0"
description = ""
authors = ["Rafael Guillén <rafael.guillen@avattar.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
datasette = "^0.55"
httpx = "^0.17.1"
sqlite-utils = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
